[package]
name = "addchain"
description = "Generate addition chains"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/addchain"
readme = "README.md"
categories = ["algorithms", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
